[gd_scene load_steps=7 format=3 uid="uid://jx56v33q6r2s"]

[ext_resource type="Script" path="res://character.gd" id="1_0c4mi"]
[ext_resource type="Texture2D" uid="uid://3gdin8rh4lh7" path="res://assets/body.png" id="1_mi76i"]
[ext_resource type="Texture2D" uid="uid://c6volswp33wfj" path="res://assets/weapon.png" id="3_wm4w0"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_gqlbq"]
load_path = "res://.godot/imported/head.png-9b3d0c39be9ea6aceb444f1daef77f41.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqm4x"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oemx2"]
size = Vector2(16, 32)

[node name="character" type="Area2D"]
script = ExtResource("1_0c4mi")

[node name="bodySprite" type="Sprite2D" parent="."]
texture = ExtResource("1_mi76i")

[node name="headSprite" type="Sprite2D" parent="."]
texture = SubResource("CompressedTexture2D_gqlbq")

[node name="weaponSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_wm4w0")

[node name="interactionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactionArea"]
shape = SubResource("RectangleShape2D_uqm4x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_oemx2")
